@@ -1,5 +1,6 @@
 Unreleased
 
+* Ignore raw `post_save` signal (Timo Ludwig, #106).
 * Retry with fallback user agent on forbidden response (Timo Ludwig, #159)
 * Also set `redirect_to` on internal redirects (Timo Ludwig, #163)
 * Add new fields to `Url` model:
